2001-12-11  Christian Stimming  <stimming@tuhh.de>

	* src/gnome-utils/druid-utils.[ch]: added
	gnc_druid_set_logo_image.

2001-12-10  Dave Peticolas  <dave@krondo.com>

	* src/scm/main.scm: handle welcome report gui here

	* src/report/utility-reports/welcome-to-gnucash.scm: remove gui code

	* src/report/utility-reports/view-column.scm: remove
	options-editor code

	* src/report/report-system/report.scm: remove options-editor code

	* src/report/report-system/report-system.scm: remove
	options-editor code

	* src/report/report-gnome/report.glade: add

	* src/report/report-gnome/report-gnome.scm: handle options-editors
	here instead of in other report modules

	* src/report/report-gnome/gw-report-gnome-spec.scm: g-wrap more
	report api

	* src/report/report-gnome/dialog-style-sheet.h: add

	* src/report/report-gnome/dialog-style-sheet.c: add

	* src/report/report-gnome/dialog-column-view.h: add

	* src/report/report-gnome/dialog-column-view.c: add

	* src/report/report-gnome/Makefile.am: add new files. fix .scm-links

	* src/gnome/glade/report.glade: remove

	* src/gnome/glade/Makefile.am: remove report.glade

	* src/gnome/dialog-style-sheet.h: remove

	* src/gnome/dialog-style-sheet.c: remove

	* src/gnome/dialog-column-view.h: remove

	* src/gnome/dialog-column-view.c: remove

	* src/gnome/gw-gnc-spec.scm: remove report-related wrapping

	* src/gnome/Makefile.am: remove deleted files

2001-12-09  Dave Peticolas  <dave@krondo.com>

	* src/backend/postgres: add autogenerated headers

	* configure.in: add new default warnings

2001-12-08  Dave Peticolas  <dave@krondo.com>

	* src/bin/overrides/gnucash-build-env.in: add report-gnome dir

	* src/backend/postgres/test/test-db.c: remove unused function

	* configure.in: remove -Wno-unused

2001-12-07  Dave Peticolas  <dave@krondo.com>

	* src/report/report-system/report.scm: move a gnome function
	to report-gnome module

	* src/report/report-system/report-system.scm: remove export
