@@ -1,5 +1,8 @@
 2001-12-11  Christian Stimming  <stimming@tuhh.de>
 
+	* src/app-utils/gnc-euro.c (gnc_convert_to_euro): Fixed rounding
+	error.
+
 	* src/gnome-utils/druid-utils.[ch]: added
 	gnc_druid_set_logo_image.
 
